Add library paths

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ OBJ = $(SRC:.cpp=.o)
 OUT = ../lib/libSynthetic.so
 
 # include directories
-INCLUDES = -I. -I../include/ -I/usr/local/include
+INCLUDES = -I. -I../include/ -I/usr/local/include -I/home/ester/virenv/py2/lib/python2.7/site-packages/synthlisa/ -I/home/ester/virenv/py2/bin/gsl/include/gsl/ -I/home/ester/git/synthlisa/lisasim/GSL/
 
 # C++ compiler flags (-g -O2 -Wall)
 CCFLAGS = -g -O2 -Wall
@@ -16,7 +16,7 @@ CCFLAGS = -g -O2 -Wall
 CCC = g++
 
 # library paths
-LIBS = -L/usr/local/lib -lgsl -lgslcblas -lm
+LIBS = -L/home/ester/virenv/py2/lib -lgsl -lgslcblas -lm 
 
 # compile flags
 LDFLAGS = -shared
